Uncommented some code lines in CarController.java that will be used to make the code work.